Wed Jun 11 05:34:16 GMT 2014  Olly Betts <olly@survex.com>

	* languages/hungarian.sbl: Fix incorrect Unicode codepoints for
	  o-double-acute and u-double-acute in Hungarian Snowball stemmer.
	  Reported by Tom Lane to snowball-discuss.

Tue Jun 10 10:59:18 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/ineb2weight.cc: Optimized IneB2:
	  Reduced number of calculations in get_sumpart and tightened upper
	  bound.

Tue Jun 10 10:23:09 GMT 2014  Olly Betts <olly@survex.com>

	* weight/ineb2weight.cc: Fix closing brace indentation.

Tue Jun 10 09:58:18 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Rework the weight name lookup to use a table like
	  the other lookups.  Change the weight names not to include "weight".

Tue Jun 10 08:15:18 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/ifb2weight.cc: Optimized
	  upper bound and weighting formula in IfB2Weight.

Tue Jun 10 05:34:52 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/inl2weight.cc: Optimized
	  upper bound and weighting formula in InL2Weight.

Tue Jun 10 05:09:08 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Add --weight option to allow the weighting scheme
	  to be specified.

Thu Jun 05 03:42:51 GMT 2014  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,tests/api_backend.cc: Fix
	  Database::get_wdf_upper_bound("") not to fail with an assertion.

Tue Jun 03 22:59:10 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Use RETURN() instead of return in methods
	  with LOGCALL annotations.

Mon Jun 02 13:15:36 GMT 2014  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Actually ship, process and install geospatial.rst.

Mon Jun 02 11:40:27 GMT 2014  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Ship collate-sbl script.

Thu May 29 12:13:06 GMT 2014  Olly Betts <olly@survex.com>
