@@ -1,7 +1,7 @@
 /** @file leafpostlist.cc
  * @brief Abstract base class for leaf postlists.
  */
-/* Copyright (C) 2007,2009,2011,2013 Olly Betts
+/* Copyright (C) 2007,2009,2011,2013,2014 Olly Betts
  * Copyright (C) 2009 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or
@@ -75,7 +75,9 @@ LeafPostList::get_weight() const
     // Fetching the document length is work we can avoid if the weighting
     // scheme doesn't use it.
     if (need_doclength) doclen = get_doclength();
-    return weight->get_sumpart(get_wdf(), doclen);
+    double sumpart = weight->get_sumpart(get_wdf(), doclen);
+    AssertRel(sumpart, <=, weight->get_maxpart());
+    return sumpart;
 }
 
 double
