@@ -1,3 +1,9 @@
+Thu Jun 12 13:30:55 GMT 2014  Olly Betts <olly@survex.com>
+
+	* api/leafpostlist.cc,matcher/synonympostlist.cc: Add assertions that
+	  get_sumpart() returns a weight contribution which is <= the upper
+	  bound which get_maxpart() returns.
+
 Wed Jun 11 05:34:16 GMT 2014  Olly Betts <olly@survex.com>
 
 	* languages/hungarian.sbl: Fix incorrect Unicode codepoints for
